...
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/button_colour"
            android:fontFamily="monospace"
            android:text="@string/filter"
            android:textColor="@color/button_text"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sort_by_button"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toEndOf="@+id/delete_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.541" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sort_by_button"
            android:layout_width="wrap_content"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995">

        <TextView
            android:id="@+id/value_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="280dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="monospace"
            android:text="00"
            android:textColor="#407783"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <!-- todo change the image button icon to the three ellipsis -->

        <TextView
            android:id="@+id/value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="203dp"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="monospace"
...
            app:layout_constraintStart_toEndOf="@+id/menu"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/items"
        android:layout_width="409dp"
        android:layout_height="503dp"
        app:layout_constraintBottom_toTopOf="@+id/footer_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_layout" />
...
