...
        android:text="Select"
        android:textColor="@color/white"

        android:textSize="26sp" />

    <TextView
        android:id="@+id/add_new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:text="Add New"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/edit_tag_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24sp"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:text="Tag"
...
