...
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="70dp"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    android:id="@+id/display_tag">
    <ListView
        android:id="@+id/tag_listview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:dividerHeight="2dp"
        android:background="@drawable/border"
...
