...
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:weightSum="10"
    android:orientation="vertical"
    tools:context=".View.InputFragment"
    android:id="@+id/fragment_input"
    android:layout_margin="70dp"
    android:background="@color/background">


    <TextView
        android:id="@+id/edit_title"
...
